--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             if(confirm("激活码错误！是否重答")){
               welcome()
             }else{
-              alert("欢迎使用（免费版）！");
+              alert("请向开发者获取激活码！");
+              history.back();
             }
           }
         }else{
