--- a/pages/WuZiQi.html
+++ b/pages/WuZiQi.html
@@ -1,4 +1,4 @@
-﻿
+<link rel="stylesheet" href="../css/common.css" />
 <style>
 
 
@@ -270,6 +270,7 @@
 	</div>
 
 </div>
+<div class="back" onclick="history.back()">←</div>
 <script src='./WuZiQi.js'></script>
     
 
