--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -126,6 +126,7 @@
     <a url="https://mail.qq.com">qq邮箱</a>
     <a url="https://www.bing.com">bing搜索引擎</a>
     <a url="https://www.migufun.com">咪咕快游</a>
+    <a url="https://tonzhon.com">铜钟音乐</a>
     <a url="https://www.bilibili.com">bilibili</a>
     <a url="https://pixiv.kanata.ml">Pixiv Viewer</a>
     <a class="mathTools">数学工具</a>
