--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -126,6 +126,7 @@
     <a url="https://mail.qq.com">qq邮箱</a>
     <a url="https://www.bing.com">bing搜索引擎</a>
     <a url="https://www.migufun.com">咪咕快游</a>
+    <a href="javascript:bilibiliSearch();">b站搜索</a>
     <a url="https://tonzhon.com">铜钟音乐</a>
     <a url="https://www.bilibili.com">bilibili</a>
     <a url="https://pixiv.kanata.ml">Pixiv Viewer</a>
@@ -191,6 +192,10 @@
           a.innerHTML = url;
         }
         p.appendChild(a);
+      }
+      function bilibiliSearch(){
+        let key = prompt("输入搜索内容");
+        (new Page({url:key})).show(document.body);
       }
     </script>
   </body>
