--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -195,7 +195,7 @@
       }
       function bilibiliSearch(){
         let key = prompt("输入搜索内容");
-        (new Page({url:key})).show(document.body);
+        (new Page({url:"https://search.bilibili.com/all?keyword="+key+"&from_source=webtop_search&spm_id_from=333.1007&search_source=5"})).show(document.body);
       }
     </script>
   </body>
