--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -2,6 +2,7 @@
   <head>
     <script src="../js/ctCode.js"></script>
     <script src="../js/jq.js"></script>
+    <script src="../changeUA.js"></script>
     <link rel="stylesheet" type="text/css" href="../main.css" />
     <style>
       *{
