--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -150,6 +150,10 @@
       <h1>我保存的网页</h1>
       <div class="back" onclick="document.querySelector('#URLPage').className = 'closedURLPage'">×</div>
     </div>
+    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+    <script>
+      lew vConsole = new VConsole();
+    </script>
     <script src="../js/saveURL.js"></script>
     <script src="../js/page.js"></script>
     <script>
