--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -128,6 +128,7 @@
     <a url="https://www.bing.com">bing搜索引擎</a>
     <a url="https://www.migufun.com">咪咕快游</a>
     <a href="javascript:bilibiliSearch();">b站搜索</a>
+    <a url="https://www.mutefun.tv/">动漫</a>
     <a url="https://tonzhon.com">铜钟音乐</a>
     <a url="https://www.bilibili.com">bilibili</a>
     <a url="https://pixiv.kanata.ml">Pixiv Viewer</a>
