--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -154,7 +154,7 @@
     </div>
     <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
     <script>
-      lew vConsole = new VConsole();
+      let vConsole = new VConsole();
     </script>
     <script src="../js/saveURL.js"></script>
     <script src="../js/page.js"></script>
@@ -206,7 +206,7 @@
       }
       function bvCreate(){
         let bvid = prompt("输入bv号");
-        (new Page({url:"https://player.bilibili.com/player.html?cid=57016129&aid=57016129&bvid="+bvid+"&page=1&as_wide=1&high_quality=1&danmaku=0&t=30"})).show(document.body);
+        (new Page({url:"https://player.bilibili.com/player.html?cid=57016129&bvid="+bvid+"&page=1&as_wide=1&high_quality=1&danmaku=0&t=30"})).show(document.body);
       }
     </script>
   </body>
