--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -206,7 +206,7 @@
       }
       function bvCreate(){
         let bvid = prompt("输入bv号");
-        (new Page({url:"https://player.bilibili.com/player.html?cid=57016129&bvid="+bvid+"&page=1&as_wide=1&high_quality=1&danmaku=0&t=30"})).show(document.body);
+        (new Page({url:"https://player.bilibili.com/player.html?bvid="+bvid+"&page=1&as_wide=1&high_quality=1&danmaku=1"})).show(document.body);
       }
     </script>
   </body>
