--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -131,6 +131,7 @@
     <a href="javascript:bvCreate();">b站bv号生成</a>
     <a url="https://www.mutefun.tv/">动漫</a>
     <a url="https://tonzhon.com">铜钟音乐</a>
+    <a url="https://tool.liumingye.cn/music/">在线音乐</a>
     <a url="https://www.bilibili.com">bilibili</a>
     <a url="https://pixiv.kanata.ml">Pixiv Viewer</a>
     <a class="mathTools">数学工具</a>
