--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="./WoGame/">窝游</a>
       </div>
       <div class="box">
-        <a href="./pages/WuZiQi.html/">五子棋</a>
+        <a href="./pages/WuZiQi.html">五子棋</a>
       </div>
       <div class="box">
         <a href="./pages/ChineseChess.html">象棋</a>
