--- a/pages/ChineseChess.html
+++ b/pages/ChineseChess.html
@@ -690,7 +690,7 @@
     </section>
 
 </section>
-<div class="back" onclick="history.back()"></div>
+<div class="back" onclick="history.back()">←</div>
 <div style="text-align:center;">
 
 <p>更多源码：<a href="http://www.mycodes.net/" target="_blank">源码之家</a></p>
