--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -83,32 +83,32 @@
         opacity:1;
         z-index:257;
       }
-      .savedURLPage .back,.mathToolsPage .back{
+      .savedURLPage .back,.shownPage .back{
         top:0;
         right:0;
         left:auto;
         bottom:auto;
       }
-      .closedMathToolsPage{
+      .hiddenPage{
         width:0;
         height:0;
         overflow:hidden;
         opacity:0;
       }
-      .mathToolsPage{
+      .shownPage{
         border:2px solid black;
         border-radius:10px;
         opacity:1;
-        width:30%;
-        height:30%;
+        width:50%;
+        height:50%;
         background-image:url("../image/HuTao/HuTao2.jpg");
         background-size:100%;
       }
-      #mathToolsPage{
+      .scalePage{
         position:absolute;
         transition:width 0.3s,height 0.3s,opacity 0.3s;
       }
-      #mathToolsPage a{
+      .scalePage a{
         width:50%;
         height:15%;
         margin-left:25%;
@@ -141,12 +141,12 @@
     <a href="https://developer.mozilla.org/">mozilla文档(直接进入)</a>
     <a url="../css.txt">我的css文档</a>
     <a url="../javascript.txt">我的js文档</a>
-    <div class="closedMathToolsPage center" id="mathToolsPage">
+    <div class="hiddenPage scale center" id="mathToolsPage">
       <a url="https://geogebra.org/classic">经典</a>
       <a url="https://geogebra.org/calculator">计算器套件</a>
       <a url="https://geogebra.org/graphing">图形计算器</a>
       <a url="https://geogebra.org/scientific">科学计算器</a>
-      <div class="back" onclick="jq('#mathToolsPage').self.className='closedMathToolsPage center'">×</div>
+      <div class="back">×</div>
     </div>
     <div class="back" onclick="history.back()">←</div>
     <div id="saveURL">我保存的网页</div>
@@ -172,11 +172,20 @@
           }).show(document.body);
         }
       }
-      jq(".mathTools").bind("click",function(){
-        let m = jq(".closedMathToolsPage");
-        m.class = "mathToolsPage center";
-        m.set();
-      });
+      function scalePage(ctrl,page){
+        jq(ctrl).bind("click",function(){
+          let p = jq(page);
+          p.class = "shownPage scalePage center";
+          p.set();
+        });
+        jq(page).find(".back").bind("click",function(){
+          let p = this.parent();
+          p.set({
+            class:"hiddenPage scalePage center"
+          })
+        })
+      }
+      scalePage(".mathTools","#mathToolsPage");
       document.querySelector("#saveURL").onclick = function(){
         let url = getURL();
         let p = document.querySelector("#URLPage");
