--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -126,6 +126,7 @@
     <h1>常用网址</h1>
     <a url="https://mail.qq.com">qq邮箱</a>
     <a url="https://www.bing.com">bing搜索引擎</a>
+    <a id="search">网络搜索</a>
     <a url="https://www.migufun.com">咪咕快游</a>
     <a href="javascript:bilibiliSearch();">b站搜索</a>
     <a href="javascript:bvCreate();">b站bv号生成</a>
@@ -146,6 +147,12 @@
       <a url="https://geogebra.org/calculator">计算器套件</a>
       <a url="https://geogebra.org/graphing">图形计算器</a>
       <a url="https://geogebra.org/scientific">科学计算器</a>
+      <div class="back">×</div>
+    </div>
+    <div class="hiddenPage scalePage center" id="searchPage">
+      <a search="quark.sm.cn/s?q=">神马搜索</a>
+      <a search="sogou.com/web?query=">搜狗搜索</a>
+      <a search="m.so.com/s?q=">360搜索</a>
       <div class="back">×</div>
     </div>
     <div class="back" onclick="history.back()">←</div>
@@ -186,6 +193,7 @@
         })
       }
       scalePage(".mathTools","#mathToolsPage");
+      scalePage("#search","#searchPage");
       document.querySelector("#saveURL").onclick = function(){
         let url = getURL();
         let p = document.querySelector("#URLPage");
