--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -194,6 +194,13 @@
       }
       scalePage(".mathTools","#mathToolsPage");
       scalePage("#search","#searchPage");
+      jq("#searchPage").bind("click",function(e){
+        let a = e.target;
+        if(a.tagName==="A"){
+          let key = prompt("输入搜索内容");
+          (new Page({url:t.getAttribute("search")+key})).show(document.body);
+        }
+      })
       document.querySelector("#saveURL").onclick = function(){
         let url = getURL();
         let p = document.querySelector("#URLPage");
