--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -113,9 +113,9 @@
         height:15%;
         margin-left:25%;
         margin-top:8%;
-        font-size:25px;
+        font-size:30%;
         text-align:center;
-        line-height:200%;
+        line-height:333%;
         background-color:#EEE;
         opacity:.5;
         border:1px solid rgba(20,20,20,.5);
