--- a/index.html
+++ b/index.html
@@ -19,18 +19,13 @@
         (Data.times = 5);
         Data.date = date.getDate();
       }
-      Data.passwords = [];
-      Data.index = random.randInt(0,499);
-      for(let i = 0;i < 500;++i){
-        let s = Math.round(random.random()*1000000);
-        Data.passwords.push(s);
-      }
+      Data.passwords=["homo专用激活码1145141919810","lws666youcannotmakemegiveup","up366littleskyserveWuhu!","Zxb专用imlovemyETP","通用技术之神孙宇与一代明君齐宣王"];
+      //Data.index = random.randInt(0,);
       function welcome(){
         alert("欢迎来到此网页！");
         if(confirm("此网站服务每天仅可免费使用5次，是否继续使用？")){
-          alert(eval(prompt("请输入指定代码获取激活码！")));
           let answer = prompt("输入激活码(6位数字)可无限使用");
-          if(answer == Data.passwords[Data.index]){
+          if(answer in Data.passwords){
             alert("欢迎使用！");
             Data.userState = 1;
           }else{
