--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -145,6 +145,7 @@
     <a url="../css.txt">我的css文档</a>
     <a url="../javascript.txt">我的js文档</a>
     <div class="hiddenPage scale center" id="mathToolsPage">
+      <a url="https://www.zybang.com/static/question/m-calculator/m-calculator.html">作业帮计算器</a>
       <a url="https://geogebra.org/classic">经典</a>
       <a url="https://geogebra.org/calculator">计算器套件</a>
       <a url="https://geogebra.org/graphing">图形计算器</a>
