--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -192,7 +192,10 @@
           let p = jq(page);
           p.class="hiddenPage scalePage center";
           p.set();
+          console.log(p,p.class)
         })
+        console.log(jq(page).find(".back"))
+        
       }
       scalePage(".mathTools","#mathToolsPage");
       scalePage("#search","#searchPage");
