--- a/pages/usualWebsites.html
+++ b/pages/usualWebsites.html
@@ -1,7 +1,5 @@
 <html>
   <head>
-    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
-    <script>let vConsole = new VConsole();</script>
     <script src="../js/ctCode.js"></script>
     <script src="../js/jq.js"></script>
     <script src="../js/changeUA.js"></script>
@@ -164,10 +162,6 @@
       <h1>我保存的网页</h1>
       <div class="back" onclick="document.querySelector('#URLPage').className = 'closedURLPage'">×</div>
     </div>
-    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
-    <script>
-      let vConsole = new VConsole();
-    </script>
     <script src="../js/saveURL.js"></script>
     <script src="../js/page.js"></script>
     <script>
@@ -188,7 +182,7 @@
           p.class = "shownPage scalePage center";
           p.set();
         });
-        jq(page).find(".back").click(function(){
+        jq(page).find(".back").bind("click",function(){
           let p = jq(page);
           p.class="hiddenPage scalePage center";
           p.set();
