--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
               welcome()
             }else{
               alert("请向开发者获取激活码！");
+              document.write();
               history.back();
             }
           }
         }else{
+          document.write();
           history.back();
         }
       }
